k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: nmdineshkumar/myfirst-py-app:tagname
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
