k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-test-app
spec:
  selector:
    app: python-app
  ports:
     - port: 80
       name: http
