k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: python.example.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-test-app
            port: 
              number: 443
  tls:
  - hosts:
    - python.example.net
    secretName: my-app-cert-cdjtd
status:
  loadBalancer:
    ingress:
      - ip: 127.0.0.1
